[package]
name = "asciiz"
version = "0.1.0"
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "asciiz create buffer and copy bytes ends with 0u8"
keywords = ["asciiz", "u8z", "u8zz", "cstring", "utf-8"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
license = "MIT"

documentation = "https://github.com/nomissbowling/asciiz"
homepage = "https://github.com/nomissbowling/asciiz"
repository = "https://github.com/nomissbowling/asciiz"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
