[package]
name = "asciiz"
version = "0.1.2" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "asciiz create buffer and copy bytes ends with 0u8"
keywords = ["asciiz", "u8z", "u8zz", "cstring", "utf-8"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
license = "MIT"

# documentation = "https://docs.rs/asciiz/latest/asciiz"
homepage = "https://crates.io/crates/asciiz"
repository = "https://github.com/nomissbowling/asciiz"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
